add_library(MyCoolDB db/MyCoolDB.h db/MyCoolDB.cpp db/structures/Row.h structures/DataTypes.h db/structures/QueryResult.h structures/Constants.h parser/Parser.cpp parser/Parser.h db/structures/Table.h db/structures/Table.h db/structures/Column.h structures/Attributes.h lexer/Token.h lexer/Token.cpp lexer/Lexer.cpp lexer/Lexer.h structures/Errors.h db/structures/commands/SelectFromModel.h db/algorithms.cpp db/structures/commands/InsertIntoModel.h db/structures/commands/Condition.h)